--- a/index.html
+++ b/index.html
@@ -10,24 +10,8 @@
     <script src="dist/leaflet-simple-locate.min.js"></script>
     
     <link rel="stylesheet" href="examples/demo.css" />
-    <style>
-             html {
-            font-size: 16px;
-        }
+    <link rel="stylesheet" href="examples/style.css" />
 
-        body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-            --primary-rgb: 25, 135, 84;
-        }
-
-        #map {
-            height: calc(var(--vh, 1vh) * 100);
-            width: 100vw;
-            /* transform: rotate(var(--leaflet-simple-locate-orientation, 0deg)); */
-        }
-    </style>
 </head>
 
 <body>
