--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <div id="map"></div>
     <script>
         "use strict";
-
-        const minLat = 40.9931327, maxLat = 40.9897231;
-        const minLng = 29.0386154, maxLng = 29.0350682;
+        const minLat = 37.42737, maxLat = 37.42447;
+        const minLng = 31.84930, maxLng = 31.85658;
         let linesArray = [];
 
         fetch('files/0.svg')
@@ -64,13 +63,24 @@
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
-        const control = new L.Control.SimpleLocate({
-            position: "topleft",
-            afterClick: (result) => {
-                if (result.geolocation) checkLocation(result.geolocation.lat, result.geolocation.lng);
-                else console.log("Konum alınamadı");
+const control = new L.Control.SimpleLocate({
+    position: "topleft",
+    afterClick: () => {
+        navigator.geolocation.getCurrentPosition(
+            function(position) {
+                let lat = position.coords.latitude;
+                let lng = position.coords.longitude;
+                console.log("Latitude:", lat);
+                console.log("Longitude:", lng);
+                checkLocation(lat, lng);
+            },
+            function(error) {
+                console.error("Konum hatası:", error.message);
+                showPopup("Konum alınamadı", "red");
             }
-        }).addTo(map);
+        );
+    }
+}).addTo(map);
 
         function showPopup(message, color) {
             let popup = L.popup().setLatLng(map.getCenter()).setContent(`<span style="color: ${color}">${message}</span>`).openOn(map);
