--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
     <script src="dist/leaflet-simple-locate.min.js"></script>
-    
+
     <link rel="stylesheet" href="examples/demo.css" />
     <link rel="stylesheet" href="examples/style.css" />
 
@@ -31,6 +31,7 @@
                 if (doorsGroup) {
                     const lines = doorsGroup.getElementsByTagName('line');
                     const viewBox = svgDoc.documentElement.viewBox.baseVal;
+                    const linesArray = [];
                     Array.from(lines).forEach(line => {
                         const id = line.id;
                         const x1 = parseFloat(line.getAttribute('x1'));
@@ -41,6 +42,7 @@
                         const endLatLng = localCoordinateToLatLng(x2, y2, viewBox);
                         linesArray.push({ id, start: startLatLng, end: endLatLng });
                     });
+                    console.log('Doors:', linesArray); // Log the doors (lines) array
                 }
             })
             .catch(error => console.error('SVG yüklenirken hata:', error));
@@ -63,33 +65,41 @@
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
-const control = new L.Control.SimpleLocate({
-    position: "topleft",
-    afterClick: () => {
-        navigator.geolocation.getCurrentPosition(
-            function(position) {
-                let lat = position.coords.latitude;
-                let lng = position.coords.longitude;
-                console.log("Latitude:", lat);
-                console.log("Longitude:", lng);
-                checkLocation(lat, lng);
-            },
-            function(error) {
-                console.error("Konum hatası:", error.message);
-                showPopup("Konum alınamadı", "red");
+        const control = new L.Control.SimpleLocate({
+            position: "topleft",
+            afterClick: () => {
+                navigator.geolocation.getCurrentPosition(
+                    function (position) {
+                        let lat = position.coords.latitude;
+                        let lng = position.coords.longitude;
+                        console.log("Latitude:", lat);
+                        console.log("Longitude:", lng);
+                        checkLocation(lat, lng);
+                    },
+                    function (error) {
+                        console.error("Konum hatası:", error.message);
+                        showPopup("Konum alınamadı", "red");
+                    }
+                );
             }
-        );
-    }
-}).addTo(map);
+        }).addTo(map);
 
         function showPopup(message, color) {
             let popup = L.popup().setLatLng(map.getCenter()).setContent(`<span style="color: ${color}">${message}</span>`).openOn(map);
         }
 
         function checkLocation(lat, lng) {
+            console.log("Checking Location:", lat, lng); // Debugging the received coordinates
+
+            // Log the boundary values for debugging
+            console.log("Min Lat:", minLat, "Max Lat:", maxLat);
+            console.log("Min Lng:", minLng, "Max Lng:", maxLng);
+
             if (lat < minLat || lat > maxLat || lng < minLng || lng > maxLng) {
+                console.log("❌ Dışarıda");
                 showPopup("❌ Dışarıda", "red");
             } else {
+                console.log("✅ İçeridesiniz"); // Debugging if inside
                 findClosestLine(lat, lng);
             }
         }
@@ -112,4 +122,5 @@ const control = new L.Control.SimpleLocate({
         }
     </script>
 </body>
+
 </html>
