--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <div id="map"></div>
     <script>
         "use strict";
-        const minLat = 37.42737, maxLat = 37.42447;
-        const minLng = 31.84930, maxLng = 31.85658;
+        const minLat = 37.755;
+        const maxLat = 37.760;
+        const minLng = 30.570;
+        const maxLng = 30.580;
         let linesArray = [];
 
         fetch('files/0.svg')
