--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div id="map"></div>
     <script>
         "use strict";
-        const minLat = 37.755;
-        const maxLat = 37.760;
-        const minLng = 30.570;
-        const maxLng = 30.580;
+        const minLat = 37.421430;
+        const maxLat = 37.430430;
+        const minLng = 31.846414;
+        const maxLng = 31.857014;
         let linesArray = [];
 
         fetch('files/0.svg')
@@ -56,9 +56,9 @@
             const lngLocalDiff = (x / viewBox.width) * lngDiff;
             return new L.LatLng(maxLat - latLocalDiff, minLng + lngLocalDiff);
         }
-
+        
         const map = new L.Map("map", {
-            center: [40.991488, 29.036736],
+            center: [37.425930, 31.852214],
             zoom: 18,
             zoomControl: false,
         });
@@ -102,7 +102,8 @@
                 showPopup("❌ Dışarıda", "red");
             } else {
                 console.log("✅ İçeridesiniz"); // Debugging if inside
-                findClosestLine(lat, lng);
+                showPopup("✅ İçeridesiniz", "green");
+
             }
         }
 
