--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 showPopup("❌ Dışarıda", "red");
             } else {
                 console.log("✅ İçeridesiniz"); // Debugging if inside
-                showPopup("✅ İçeridesiniz", "green");
-
+                findClosestLine(lat, lng);
+                
             }
         }
 
