--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     <div id="map"></div>
     <script>
         "use strict";
-        const minLat = 37.421430;
-        const maxLat = 37.430430;
-        const minLng = 31.846414;
-        const maxLng = 31.857014;
+        const minLat = 40.9931327, maxLat = 40.9897231;
+        const minLng = 29.0386154, maxLng = 29.0350682;
         let linesArray = [];
 
 
