--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             0: 1160,  // Kat 0 için altitude
             1: 1170  // Kat 1 için altitude
         };
-        const minLat = 37.427902, maxLat = 37.424307;
-        const minLng = 31.845707, maxLng = 31.858478;
+        const minLat = 37.4250453, maxLat = 37.4268453;
+        const minLng = 31.8511658, maxLng = 31.8533658;
         let linesArray0 = [];
         let linesArray1 = [];
 
